# battleships

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
app/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/scripts/: postcodegen.mjs
app/src/: App.tsx  index.css
app/src/api/: AbiClient.ts
app/src/api/game/: GameClient.ts
app/src/api/lobby/: LobbyClient.ts
app/src/components/: GameBoard.tsx  LobbySelect.tsx  LobbyView.tsx  NavBar.tsx  PlacementGrid.tsx  ShipSelector.tsx  ShotGrid.tsx
app/src/constants/: en.global.json
app/src/features/kv/api/: context.test.ts  context.ts  index.ts
app/src/hooks/: useBattleshipsLobby.test.ts  useBattleshipsLobby.ts  useGameSubscriptions.test.ts  useGameSubscriptions.ts  useNamespaceBootstrap.ts
app/src/pages/home/: index.tsx
app/src/pages/login/: Authenticate.tsx
app/src/pages/match/: config.test.ts  config.ts  index.tsx
app/src/pages/play/: index.tsx
app/src/types/: events.ts
architecture/: index.html  styles.css
data/calimero-node-1/calimero-node-1/: config.toml
data/calimero-node-2/calimero-node-2/: config.toml
docs/superpowers/: 2026-03-31-battleships-group-improvements.md
docs/superpowers/plans/: 2026-03-31-battleships-group-architecture.md  2026-04-14-battleships-crdt-migration.md
docs/superpowers/specs/: 2026-04-01-lobby-first-flow-design.md  2026-04-14-battleships-crdt-design.md
e2e/: Untitled  workflow-battleships-e2e.yml
logic/: Cargo.toml  MULTI_SERVICE_PLAN.md  build-bundle.sh  build.rs  build.sh  manifest.json
logic/crates/game/: Cargo.toml  build.rs  build.sh
logic/crates/game/res/: abi.json  game.wasm
logic/crates/game/src/: audit.rs  board.rs  events.rs  game.rs  lib.rs  players.rs  ships.rs  validation.rs
logic/crates/lobby/: Cargo.toml  build.rs  build.sh
logic/crates/lobby/res/: abi.json  lobby.wasm
logic/crates/lobby/src/: events.rs  lib.rs
logic/crates/types/: Cargo.toml
logic/crates/types/src/: lib.rs
logic/res/: abi.json  battleships-0.2.5.mpk  battleships-0.3.0.mpk  battleships.mpk  battleships.wasm  kv_store.wasm
logic/src/: board.rs  events.rs  game.rs  lib.rs  lobby.rs  players.rs  ships.rs  validation.rs
workflows/: workflow-example.yml
