[package]
name = "kv-store"
description = "Calimero KV Store application"
version = "0.2.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.56"
calimero-sdk = { path = "../../core/crates/sdk" }
calimero-storage = { path = "../../core/crates/storage" }
bs58 = "0.4"

[build-dependencies]
calimero-wasm-abi = { path = "../../core/crates/wasm-abi" }
serde_json = "1.0.113"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
