[workspace]
members = ["crates/types", "crates/lobby", "crates/game"]
resolver = "2"

[workspace.dependencies]
calimero-sdk = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-storage = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-storage-macros = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-wasm-abi = { git = "https://github.com/calimero-network/core", branch = "master" }
thiserror = "1.0.56"
bs58 = "0.4"
serde_json = "1.0.113"
battleships-types = { path = "crates/types" }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
