[package]
name = "battleships-game"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
battleships-types = { workspace = true }
calimero-sdk = { workspace = true }
calimero-storage = { workspace = true }
calimero-storage-macros = { workspace = true }
bs58 = { workspace = true }
sha2 = "0.10"

[build-dependencies]
calimero-wasm-abi = { workspace = true }
serde_json = { workspace = true }
