[package]
name = "battleships-lobby"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
battleships-types = { workspace = true }
bs58 = { workspace = true }
calimero-sdk = { workspace = true }
calimero-storage = { workspace = true }
calimero-storage-macros = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }

[build-dependencies]
calimero-wasm-abi = { workspace = true }
serde_json = { workspace = true }
